<resources>
    <string name="app_name">connect+</string>
    <string name="login_button">Login</string>
    <string name="sign_up_button">Sign-up</string>
    <string name="welcome_text">Welcome to Connect+</string>
    <string name="name">Name</string>
    <string name="user_id">User ID / e-mail</string>
    <string name="e_mail">e-mail</string>
    <string name="dob">Date of birth : DD/MM/YYYY</string>
    <string name="address">Address</string>
    <string name="register_title">Let\'s Register You Up</string>
    <string name="registration_successful">Registration Successful !</string>
    <string name="continue_to_app">Continue</string>
    <string name="or">(or)</string>
    <string name="password">Password</string>
    <string name="phone">Phone</string>
    <string name="phonetype">Phone Type</string>
    <string name="profile_pic">Profile Pic</string>
    <string name="test_array">hi this is a test string to check paragraph layout.
        This line simply creates a new line and checks the integrity of the layout if the data feed is a large string</string>
    <string name="comment">Comment</string>
    <string name="nice">nice!!</string>
    <string name="post">Post</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
