<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ubuntu"
    tools:context="com.test.striker.connect.ProfileFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/marginLeft">

        <ImageView
            android:id="@+id/profile"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:layout_gravity="center"
            android:background="@drawable/round_layout"
            android:contentDescription="@string/profile_pic"
            android:src="@drawable/blank_profile" />

        <TextView
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/marginLeft"
            android:text="@string/name"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/marginLeft"
            android:text="@string/e_mail"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/dob"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/marginLeft"
            android:text="@string/dob"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/marginLeft"
            android:text="@string/address"
            android:textColor="@android:color/white" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/phoneText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="@dimen/marginLeft"
                android:text="@string/phone"
                android:textColor="@android:color/white" />

            <TextView
                android:id="@+id/phoneType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:padding="@dimen/marginLeft"
                android:text="@string/phonetype"
                android:textColor="@android:color/white" />
        </LinearLayout>
    </LinearLayout>
</FrameLayout>