<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.test.striker.connect.SubmitActivity"
    android:background="@drawable/ubuntu">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/marginLeft">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/registration_successful"
        android:textColor="@android:color/white"
        android:gravity="center"
        android:padding="@dimen/marginLeft"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textColor="@android:color/white"
        android:gravity="center"
        android:padding="@dimen/marginLeft"
        android:id="@+id/name"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/e_mail"
        android:textColor="@android:color/white"
        android:gravity="center"
        android:padding="@dimen/marginLeft"
        android:id="@+id/email"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dob"
        android:textColor="@android:color/white"
        android:gravity="center"
        android:padding="@dimen/marginLeft"
        android:id="@+id/dob"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/address"
        android:textColor="@android:color/white"
        android:gravity="center"
        android:padding="@dimen/marginLeft"
        android:id="@+id/address"/>
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/colorPrimaryDark"
        android:layout_alignParentBottom="true"
        android:text="@string/continue_to_app"
        android:gravity="center"
        android:typeface="serif"
        android:textColor="@android:color/white"
        android:id="@+id/openup"/>
</RelativeLayout>
