<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.test.striker.connect.RegisterActivity"
    android:background="@drawable/ubuntu">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_title"
        android:textColor="@android:color/white"
        android:layout_gravity="center"
        android:textSize="16sp"
        android:layout_margin="@dimen/marginLeft"/>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/layout"
        android:layout_margin="@dimen/marginLeft"
        android:padding="2dp">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editText1"
            android:hint="@string/name"/>
    </FrameLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/layout"
        android:layout_margin="@dimen/marginLeft"
        android:padding="2dp">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editText2"
            android:hint="@string/e_mail"/>
    </FrameLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/layout"
        android:layout_margin="@dimen/marginLeft"
        android:padding="2dp">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editText3"
            android:hint="@string/dob"/>
    </FrameLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/layout"
        android:layout_margin="@dimen/marginLeft"
        android:padding="2dp">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editText4"
            android:hint="@string/address"/>
    </FrameLayout>
    </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:id="@+id/submit"
            android:hint="@string/address"
            android:textColor="@android:color/white"
            android:text="@string/sign_up_button"
            android:background="@color/colorPrimaryDark"
            android:gravity="center"
            android:layout_alignParentBottom="true"
            android:typeface="serif"/>

</RelativeLayout>
