<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/list_layout"
    android:layout_width="match_parent"
    android:layout_height="65dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
    android:layout_height="64dp"
    android:orientation="horizontal">
    <ImageView
        android:id="@+id/image"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:contentDescription="@string/profile_pic"
        android:padding="4dp"
        android:src="@drawable/blank_profile" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#ECEFF1"
        android:orientation="vertical"
        android:padding="8dp">

        <TextView
            android:id="@+id/name_text"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/name"
            android:textColor="@android:color/secondary_text_light" />

        <TextView
            android:id="@+id/status_text"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/phone"
            android:textColor="@android:color/tertiary_text_light" />
    </LinearLayout>
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="64dp"
        android:layout_marginStart="64dp"
        android:background="#90A4AE" />
</LinearLayout>