<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/list_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <Space
        android:layout_width="match_parent"
        android:layout_height="8dp" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#ECEFF1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_margin="4dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/profile_image"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/blank_profile" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:paddingLeft="@dimen/formPadding"
                    android:paddingRight="@dimen/formPadding"
                    android:paddingStart="@dimen/formPadding">

                    <TextView
                        android:id="@+id/name_text"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:gravity="bottom"
                        android:text="Name"
                        android:textColor="@android:color/secondary_text_light" />

                    <TextView
                        android:id="@+id/time_text"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:gravity="top"
                        android:text="9:30" />
                </LinearLayout>

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:src="@drawable/vert_grey" />

            </RelativeLayout>

        </LinearLayout>
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#ECEFF1">

        <TextView
            android:id="@+id/status_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/marginLeft"
            android:text="@string/test_array"
            android:textColor="@android:color/secondary_text_light" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#ECEFF1">

        <ImageView
            android:id="@+id/uploaded_image"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ubuntu" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ECEFF1">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/marginLeft"
            android:background="@drawable/layout"
            android:padding="@dimen/formPadding">

            <TextView
                android:id="@+id/comment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:text="@string/nice" />
        </FrameLayout>
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#CFD8DC">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/marginLeft"
            android:background="@drawable/layout"
            android:padding="@dimen/formPadding">

            <EditText
                android:id="@+id/editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:hint="@string/comment" />
        </FrameLayout>
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#CFD8DC"
        android:padding="8dp">

        <Button
            android:id="@+id/comment_button"
            android:layout_width="wrap_content"
            android:layout_height="28dp"
            android:layout_gravity="end"
            android:background="@drawable/button_layout"
            android:text="@string/comment"
            android:textColor="@android:color/white" />
    </FrameLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="4dp" />
</LinearLayout>